--- a/operators/alquimia-operator/1.0.0/metadata/annotations.yaml
+++ b/operators/alquimia-operator/1.0.0/metadata/annotations.yaml
@@ -13,3 +13,7 @@ annotations:
   # Annotations for testing.
   operators.operatorframework.io.test.mediatype.v1: scorecard+v1
   operators.operatorframework.io.test.config.v1: tests/scorecard/
+
+  # Required Red Hat certification annotation
+  com.redhat.openshift.versions: "v4.15-v4.16"
+
